fix translation link error

--- a/languages/ajax_login_register-zh_CN.po
+++ b/languages/ajax_login_register-zh_CN.po
@@ -318,10 +318,10 @@ msgid ""
 "<a href=\"http://zanematthew.com/ajax-login-register-help-videos/\" target="
 "\"_blank\">How To add Facebook Settings to AJAX Login & Register</a>."
 msgstr ""
-"这是应用程序ID，你可以<a href=“https://developers.facebook.com/“>Facebook开发"
-"</a>应用程序仪表板看到。有关详细说明请访问<a href=“http://zanematthew.com/"
-"ajax-login-register-help-videos/“ target=“_blank”>如何添加Facebook的设置到"
-"AJAX登录和注册</a> 。"
+"这是应用程序ID，你可以<a href=https://developers.facebook.com/ "
+"target=“_blank”>Facebook开发</a>应用程序仪表板看到。有关详细说明请访问<a "
+"href=http://zanematthew.com/ajax-login-register-help-videos/ target=“_blank”>"
+"如何添加Facebook的设置到AJAX Login & Register</a> 。"
 
 #: src/ALRSocial/ALRSocialFacebook.php:302
 msgid "Use Facebook Avatar"
